<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="#89c192"
        android:id="@+id/content_frame">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#dcdcdf"
            android:paddingLeft="27dp"
            android:paddingRight="27dp">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center"
                android:layout_marginTop="7dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_menu"
                    android:background="@drawable/ic_menu"
                    android:layout_gravity="center_vertical" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:src="@drawable/main_logo"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_gravity="center_horizontal" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_location"
                    android:background="@drawable/ic_map"
                    android:layout_gravity="center|right" />
            </FrameLayout>

            <FrameLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_marginTop="83dp"
                android:layout_gravity="center_horizontal">

                <FrameLayout
                    android:layout_width="40dp"
                    android:layout_height="fill_parent"
                    android:padding="5dp"
                    android:background="#da7047"
                    android:id="@+id/ll_profile">

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="#89c192">

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/img_profile"
                            android:src="@drawable/profile_no_photo" />
                    </FrameLayout>
                </FrameLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="45dp"
                    android:layout_marginRight="55dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="#89c192"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ОЛЕГ"
                        android:id="@+id/profile_name"
                        android:background="@xml/white_border"
                        android:textColor="#fff"
                        android:textSize="12dp" />

                    <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/profile_progress"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:indeterminate="false"
                        android:max="100"
                        android:progress="50" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2"
                        android:id="@+id/profile_level"
                        android:background="@xml/white_border"
                        android:autoText="false"
                        android:textColor="#fff"
                        android:textSize="12dp" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="50dp"
                    android:layout_height="fill_parent"
                    android:background="#89c192"
                    android:id="@+id/ll_inventory"
                    android:layout_gravity="right">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView2"
                        android:src="@drawable/ic_inventory"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="7dp" />

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="15dp"
                        android:text="4"
                        android:id="@+id/inventory_count"
                        android:background="@drawable/badge_right"
                        android:textColor="#fff"
                        android:layout_gravity="center_vertical|right"
                        android:paddingLeft="9dp"
                        android:layout_marginRight="9dp"
                        android:textSize="9dp"
                        android:gravity="center_vertical" />
                </FrameLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="130dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="55dp"
                android:id="@+id/container"></FrameLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="#89c192"
                android:baselineAligned="true"
                android:padding="2dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/events"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView3"
                        android:src="@drawable/ic_events"
                        android:layout_marginBottom="2dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/events"
                        android:id="@+id/textView"
                        android:textColor="#fff"
                        android:textSize="9dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/places"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView4"
                        android:src="@drawable/ic_places"
                        android:layout_marginBottom="2dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/places"
                        android:id="@+id/textView2"
                        android:textColor="#fff"
                        android:textSize="9dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/marks"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView5"
                        android:src="@drawable/ic_marks"
                        android:layout_marginBottom="2dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marks"
                        android:id="@+id/textView3"
                        android:textColor="#fff"
                        android:textSize="9dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/tasks"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView6"
                        android:src="@drawable/ic_tasks"
                        android:layout_marginBottom="2dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tasks"
                        android:id="@+id/textView4"
                        android:textColor="#fff"
                        android:textSize="9dp" />
                </LinearLayout>
            </LinearLayout>

        </FrameLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111" />
</android.support.v4.widget.DrawerLayout>